# battle-of-algorithms

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  components.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/auth-error/: page.tsx
app/editor/: actions.ts  page.tsx
app/forbidden/: page.tsx
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260412_0001_initial_schema.py  20260412_0002_battle_submission_links.py  20260422_0003_private_battles.py  20260422_0004_private_battle_results.py  20260422_0005_private_battle_random_map_flow.py  20260422_0006_private_battle_map_change_votes.py
backend/app/: __init__.py  config.py  main.py  seed.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: internal_arena.py  internal_auth.py  internal_moderation.py  internal_submission.py  protected.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  battle.py  code_submission.py  enums.py  submission_review.py  user.py
backend/app/schemas/: battle.py  submission.py  user.py
backend/app/services/: battle_service.py  submission_service.py  user_service.py
components/: PlayerContext.tsx
docs/: ALGORITHMS.md  DOCKER_OPERATIONS_RUNBOOK.md  IMPLEMENTATION_PLAN.md  LOCAL_INFRA_CLEANUP.md  POTENTIAL_TODO.md  PROJECT.md  PROJECT_SUMMARY.md  TODO.md
infra/: backend.env.example  docker-compose.yml  frontend.env.example  init-keycloak.sh  keycloak.env.example  postgres.env.example
public/: site.webmanifest
utils/: consts.ts  types.ts
(+91 files in other folders)
