[project]
name = "battle-of-algorithms-backend"
version = "0.1.0"
description = "Backend API for Battle of Algorithms"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "alembic", "alembic.ini", ".env.example"]

[tool.uv]
package = false
